<resources>
<!--    Main    -->
    <string name="app_name" translatable="false">Simple Notes</string>
    <string name="greeting_night">Good Night</string>
    <string name="greeting_morning">Good Morning</string>
    <string name="greeting_day">Good Afternoon</string>
    <string name="greeting_evening">Good Evening</string>
    <string name="active_tasks">Active</string>
    <string name="completed_tasks">Completed</string>
    <string name="all_tasks">All</string>
    <string name="search_tasks">Search</string>
<!--    Settings    -->
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="system_theme">System</string>
<!--    Edit task    -->
    <string name="new_task">New Task</string>
    <string name="task_editing">Task Editing</string>
    <string name="name_input">Name</string>
    <string name="category_input">Category</string>
    <string name="description_input">Description</string>
    <string name="save_task">Save</string>
    <string name="saved">Task Saved!</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>

    <string name="no_tasks">No tasks here yet…</string>

<!--    Task    -->
    <string name="name">Name: </string>
    <string name="category">Category: </string>
    <string name="completed">Completed: </string>
    <string name="yas">Yes</string>
    <string name="no">No</string>
    <string name="created">Created: </string>
    <string name="description">Description</string>
    <string name="id" translatable="false">Id: </string>

<!--    Errors    -->
    <string name="saving_error">Unable to save. Error occurred</string>
</resources>