<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_padding">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"


        app:titleTextColor="@color/primary_darker" />

    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginTop="@dimen/medium_padding"
        android:background="@drawable/input_line"
        android:backgroundTint="@color/gray"
        android:hint="@string/name_input"
        android:inputType="text"
        android:paddingStart="@dimen/medium_padding"
        android:paddingEnd="@dimen/medium_padding"
        android:textColor="@color/unchangeable_standard_text_color"
        android:textColorHint="@color/primary_darker"


        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/task_category"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginTop="@dimen/medium_padding"
        android:background="@drawable/input_line"
        android:backgroundTint="@color/gray"
        android:hint="@string/category_input"
        android:inputType="text"
        android:paddingStart="@dimen/medium_padding"
        android:paddingEnd="@dimen/medium_padding"
        android:textColor="@color/unchangeable_standard_text_color"
        android:textColorHint="@color/primary_darker"


        app:layout_constraintTop_toBottomOf="@+id/task_name"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginTop="@dimen/medium_padding"
        android:background="@drawable/input_line"
        android:backgroundTint="@color/gray"
        android:hint="@string/description_input"
        android:inputType="text"
        android:paddingStart="@dimen/medium_padding"
        android:paddingEnd="@dimen/medium_padding"
        android:textColor="@color/unchangeable_standard_text_color"
        android:textColorHint="@color/primary_darker"


        app:layout_constraintTop_toBottomOf="@+id/task_category"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/save_task"
        android:layout_width="120dp"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginTop="@dimen/medium_padding"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primary"
        android:gravity="center"
        android:text="@string/save_task"
        android:textColor="@color/white"
        android:textSize="@dimen/standard_title_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_description" />

    <TextView
        android:id="@+id/saved_indicator"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginTop="@dimen/medium_padding"
        android:text="@string/saved"
        android:textColor="@color/green"

        android:textSize="@dimen/standard_title_size"

        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_task" />

</androidx.constraintlayout.widget.ConstraintLayout>